--- a/labs/4/src/component/Card/index.css
+++ b/labs/4/src/component/Card/index.css
@@ -2,6 +2,11 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     padding: 50px;
-    margin: auto;
+    margin: 40px auto;
     text-align: center;
 }
+.close {
+    font-size: 1.5em;
+    float: right;
+    cursor: pointer;
+  }
